--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack/react-query": "^5.51.1",
-    "@web3modal/wagmi": "^5.1.1",
+    "@tanstack/react-query": "5.51.1",
+    "@web3modal/wagmi": "5.0.6",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -64,8 +64,8 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.18.2",
-    "wagmi": "^2.12.1",
+    "viem": "2.17.4",
+    "wagmi": "2.10.10",
     "zod": "^3.24.2"
   },
   "devDependencies": {
